fix: middleware for auth
